Adicionado CRUD completo para user e certificate e documentação swagger
